styles.css
/* ... */
/* Hamburger Menu */
.hamburger {
	display: none;
	flex-direction: column;
	gap: 5px;
	cursor: pointer;
}

.hamburger span {
	width: 25px;
	height: 3px;
	background-color: #333;
}

@media (max-width: 768px) {
	.logo img {
		width: 120px;
	}
	.nav-links {
		display: none;
		flex-direction: column;
		background-color: #fff;
		position: absolute;
		top: 80px;
		left: 0;
		width: 100%;
		padding: 20px 0;
		box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
	}

	.nav-links.active {
		display: flex;
	}

	.hamburger {
		display: flex;
	}

	.login-button {
		display: none;
	}

	.nav-links li {
		text-align: center;
		padding: 10px 0;
	}
}

/* Services Drop Down */

.services {
	position: relative;
	box-shadow: 0px;
}

.dropdown {
	display: none;
	position: absolute;
	top: 30px;
	left: 0;
	background: #fff;
	border: 1px solid #f7b84b;
	border-radius: 8px;
	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
	padding: 20px;
	width: 650px;
	z-index: 10;
	grid-template-columns: repeat(3, 1fr);
	gap: 20px;
}

.dropdown-column {
	display: flex;
	flex-direction: column;
	gap: 10px;
}

.dropdown-item {
	color: #000;
	text-decoration: none;
	font-size: 14px;
}

.dropdown-item span {
	display: block;
	font-size: 12px;
	color: #777;
}

/* Responsive design for mobile */
@media (max-width: 768px) {
	.dropdown {
		width: 100%;
		left: 0;
		top: 40px;
		grid-template-columns: 1fr;
	}
}

/* Show dropdown when active class is added */
.dropdown.active {
	display: grid;
}

/* Style for selected dropdown item */
.dropdown-item.selected {
	color: #ff5722; /* Change text color to orange */
	font-weight: bold;
}

/* Background Icons */
.background-icons {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 0;
	pointer-events: none;
}

.icon {
	position: absolute;
	opacity: 0.3;
}

.speed-icon {
	top: 25%;
	left: 18%;
	width: 150px;
	opacity: 1;
	width: 15%;
}

.rocket-icon {
	top: 55%;
	right: 15%;
	width: 150px;
}

.thunder-icon {
	bottom: 20%;
	left: 10%;
	width: 100px;
}

.star-icon {
	top: 95%;
	left: 20%;
	width: 30px;
}

@media (max-width: 768px) {
	.speed-icon {
		display: none;
	}

	.rocket-icon {
		width: 60px;
		left: 10%;
	}

	.thunder-icon {
		width: 50px;
		right: 5%;
	}
}

/* Main section styles */
.main-section {
	text-align: center;
	padding: 150px 20px 0px;
	background-color: #ffffff;
}

.main-section h1 {
	font-size: 4em;
	margin-bottom: 8px;
	font-weight: 600;
}
.test {
	display: inline-flex;
	align-items: start;
	flex-direction: column;
	gap: 0;
	justify-content: center;
}
.test p {
	height: 80px;
}
.test svg {
	padding-left: 10px;
}
@media (max-width: 830px) {
	.test svg {
		display: none;
	}
	.test p {
		height: fit-content;
	}
}
.main-section h1 #first {
	color: var(---main-font-color);
}
.main_wave {
	position: absolute;
	left: 27%;
	top: 31%;
	width: 200px;
}

@media (max-width: 768px) {
	.main-section h1 {
		font-size: 3em;
		margin-bottom: 8px;
	}

	.main-section h1 span {
		color: var(---main-font-color);
	}
}

.get-start-p {
	font-size: 1.2em;
	margin-bottom: 20px;
	font-weight: 500;
	color: var(---main-font-color);
}

.cta-buttons {
	display: flex;
	justify-content: center;
	gap: 20px;
}

.cta-buttons button {
	padding: 10px 20px;
	border: none;
	cursor: pointer;
	font-size: 1em;
}

.get-started-btn {
	background-color: var(---main-font-color);
	border: none;
	color: white;
	border-radius: 30px;
}
.watch-btn span {
	color: red !important;
}
.watch-btn {
	background-color: #ffffff;
	border: 0.5px solid #a8c9fa !important;
	font-weight: bold;
	/*color: #ff4d4d;*/
	font-size: 0.8em;
	border-radius: 30px;
}
.watch-btn:hover {
	background: var(---main-font-color);
	color: white;
}
.watch-btn:hover span {
	color: white !important;
}
.verification-count {
	margin-top: 20px;
	font-size: 0.8 em;
	color: #7691dd;
}

.image-section img {
	/* width: 500px; */
	object-fit: cover;
	z-index: 1;
	top: 8px;
	position: relative;
	object-position: center;
}

@media (max-width: 768px) {
	.image-section img {
		width: 100%;
		margin-top: 10px;
	}
}

/* WhatsApp Section */
.whatsapp-section {
	background-color: #f0f8ff;
	padding: 50px 20px;
	text-align: center;
	position: relative;
	z-index: -1;
}

.whatsapp-section h2 {
	font-size: 35px;
	margin-bottom: 20px;
}

.phone-border {
	background-color: #f6e8a7;
	border-radius: 35px;
	padding: 25px 10px 20px 10px;
	display: inline-block;
	height: 700px;
}

.phone {
	background-color: #ffffff;
	/* border-radius: 45px; */

	height: 500px;
	width: 280px;
	/* Adjusted to smaller width */
	position: relative;
	margin: 0 auto;
	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.phone-header {
	background-color: #ffffff;
	padding: 10px;
	border-radius: 30px 30px 0 0;
	font-weight: bold;
	font-size: 1.4em;
}

.phone-title {
	font-family: "Georgia", sans-serif;
	margin: 0;
	padding: 5px;
	color: black;
	text-align: center;
	font-weight: bold;
}

.phone-notch {
	height: 14px;
	width: 55px;
	background-color: black;
	margin: 10px auto 0;
	border-radius: 10px;
}

/* Phone Content Style */
.phone-content {
	background-color: #ffffff;
	display: flex;
	justify-content: center;
	align-items: flex-end;
	padding: 20px;
	flex-grow: 1;
}

input[type="text"] {
	outline: none;
	width: 75%;
	padding: 10px;
	/* border-radius: 15px; */
	font-size: 0.9em;
	background-color: white;
}

.send-button {
	background-color: #ff6600;
	border-radius: 10px;
	padding: 10px 15px;
	border: none;
	color: white;
	font-size: 0.9em;
	cursor: pointer;
}
#dot {
	position: absolute;
	z-index: 1;
	bottom: 0;
	left: 0;
	width: 100%;
	opacity: 0.8;
	height: auto;
	object-fit: cover;
}
/* Labels */
.label {
	position: absolute;
	background-color: #ff4d4d;
	color: white;
	border-radius: 10px;
	width: 250px;
	text-align: left;
	font-size: 16px;
}

.credit-check {
	padding: 3px 15px;
	top: 40%;
	left: 32%;
	border-radius: 50px;
	width: auto;
}
/* ... */

